# cpp-project-template

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  improvement-ideas.md  setup.ps1  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: main.cpp
tests/: CMakeLists.txt
tools/: build.ps1  build.sh  check-format.sh  check-prereqs.ps1  check-prereqs.sh  clang-format.sh  clang-tidy.ps1  clang-tidy.sh  configure.ps1  configure.sh  coverage.sh
